@@ -45,8 +45,6 @@ if (t3lib_extMgm::isLoaded('sr_freecap')) {
  * Hook for captcha image marker when extension 'sr_freecap' is used
  */
 class tx_agency_freecap {
-	const SESSIONNAMESPACE = 'tx_srfreecap';
-
 	/**
 	 * Sets the value of captcha markers
 	 */
@@ -103,16 +101,23 @@ class tx_agency_freecap {
 			isset($dataArray[$theField])
 		) {
 			$freeCap = t3lib_div::getUserObj('&tx_srfreecap_pi2');
-				// Save the sr_freecap word_hash
-				// sr_freecap will invalidate the word_hash after calling checkWord
-			$sessionData = $GLOBALS['TSFE']->fe_user->getKey('ses', self::SESSIONNAMESPACE);
+			if (isset($GLOBALS['TYPO3_CONF_VARS']['FE']['eID_include']['sr_freecap_EidDispatcher'])) {
+				$sessionNameSpace = 'tx_srfreecap';
+			} else {
+				// Old version of sr_freecap
+				$sessionNameSpace = 'tx_' . $freeCap->extKey;
+			}
+			// Save the sr_freecap word_hash
+			// sr_freecap will invalidate the word_hash after calling checkWord
+			$sessionData = $GLOBALS['TSFE']->fe_user->getKey('ses', $sessionNameSpace);
+
 			if (!$freeCap->checkWord($dataArray[$theField])) {
 				$errorField = $theField;
 			} else {
 				// Restore sr_freecap word_hash
 				$GLOBALS['TSFE']->fe_user->setKey(
 					'ses',
-					self::SESSIONNAMESPACE,
+					$sessionNameSpace,
 					$sessionData
 				);
 				$GLOBALS['TSFE']->storeSessionData();
