@@ -1,3 +1,7 @@
+
+2013-12-28 Franz Holzinger <franz@ttproducts.de>
+	* Fix bug #50607: sr_freecap Captcha might not be accepted after submission
+
 2013-11-19 Franz Holzinger <franz@ttproducts.de>
 	* fix bug #53741: remove apostrophe
 
